<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_servico"
            android:icon="@drawable/ic_servico"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_cliente"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Comunicação" />

        <item
            android:id="@+id/nav_contato"
            android:icon="@drawable/ic_email"
            android:title="@string/contato" />

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/sobre" />


</menu>